--- a/variables.scss
+++ b/variables.scss
@@ -1,5 +1,3 @@
-$class-xxsmall-column: col-xxs !default;
-$class-xxsmall-offset: offset-xxs !default;
 $class-xsmall-column: col-xs !default;
 $class-xsmall-offset: offset-xs !default;
 $class-small-column: col-sm !default;
@@ -10,15 +8,15 @@ $class-large-column: col-lg !default;
 $class-large-offset: offset-lg !default;
 $class-xlarge-column: col-xl !default;
 $class-xlarge-offset: offset-xl !default;
-$colums-num: 12;
 
-$space: 10px;
+$row-margin: 20px;
+$columns-num: 12;
+$column-gap: 10px;
 
 $breakpoints: (
-	'xxsmall': 480px,
 	'xsmall': 640px,
-	'tablet': 720px,
 	'small':  840px,
 	'medium': 1024px,
 	'large':  1200px
+	'xlarge':  1600px
 ) !default;
